[package]
name = "parser"
version = "0.1.0"
edition = "2024"

authors = [
  "Francesco Motto <francesco.motto@mail.polimi.it>",
  "Davide Andreotti <davide.andreotti@polimi.it>",
  ]

[dependencies]

ark-ff = { version = "0.4.0" }
ark-relations = { version = "0.4" }
ark-serialize = "0.5.0"
ark-std = { version = "0.4.0" }
num-bigint = "0.4.6"
num-traits = "0.2"

